fix selectors, add wrapping and media

--- a/homework/axit-app/css/style.css
+++ b/homework/axit-app/css/style.css
@@ -10,7 +10,8 @@
 }
 
 .awesome {
-    margin-top: 118px;
+    padding-top: 118px;
+    padding-bottom: 110px;
 }
 
 .container {
@@ -20,6 +21,7 @@
 }
 
 .containerTitle {
+    margin-bottom: 40px;
     font-size: 36px;
     text-transform: uppercase;
     text-align: center;
@@ -28,12 +30,11 @@
 
 .containerHorizontalSeparator {
     width: 170px;
-    margin: 40px auto 0 auto;
+    margin: 0 auto 40px;
     border-bottom: 1px solid #EC7979;
 }
 
 .containerSubtitle {
-    margin-top: 40px;
     text-align: center;
     line-height: 21px;
     color: #86878B;
@@ -45,7 +46,6 @@
     flex-wrap: wrap; /* разрешает элементу переходить на новую строку при нехватке места в контейнере */
     justify-content: center;
     margin-top: 92px;
-    margin-bottom: 114px; /* TODO: поискать решение получше */
 }
 
 .card {
@@ -62,7 +62,6 @@
     margin: 0 auto;
     border: 1px solid #EC7979;
     border-radius: 50%;
-    
 }
 
 .cardTitle {
@@ -70,51 +69,44 @@
     font-family: "Open Sans", serif;
     font-size: 24px;
     font-weight: 700;
+    line-height: 33px;
     text-align: center;
 }
 
 .cardDescription {
     margin-top: 26px;
+    line-height: 21px;
     text-align: center;
 }
 
 .pricing {
-    background-color: #f5f5f5;
-}
-
-.container {
     padding-top: 82px;
+    padding-bottom: 83px;
+    background-color: #f5f5f5;
 }
 
 .servicePlanList {
     display: flex;
     gap: 30px;
     align-items: flex-end;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 59px;
-
-    padding-bottom: 83px;
 }
 
 .servicePlan {
     display: flex;
     flex-direction: column;
-    width: 370px;
+    flex-wrap: wrap;
+    flex-basis: 288px;
+    flex-grow: 1;
+    max-width: 370px;
 }
 
-.servicePlan :nth-child(-n+3) { /* выбирает любые первые три дочерних элемента внутри тега с классом servicePlan */
-    background-color: #333;
-}
-
-.servicePlan :nth-child(-n+2) {
-    color: #fff;
-}
-
-.servicePlan :nth-child(n+3) { /* выбирает все дочерние элементы внутри тега с классом servicePlan, начиная с третьего */
-    color: #86878B;
-}
-
-.servicePlan :nth-child(n+4) {
-    background-color: #fff
+.servicePlanSelected {
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    box-shadow: 0 4px 10px 0 #33333333; 
 }
 
 .servicePlan > * { /* выбирает все дочерние элементы внутри тега с классом servicePlan */
@@ -125,8 +117,12 @@
     box-sizing: border-box;
 }
 
-.servicePlan :not(:first-child) { /* выбирает все дочерние элементы внутри тега с классом servicePlan, кроме первого */
+.servicePlan > :not(:first-child) { /* выбирает все дочерние элементы внутри тега с классом servicePlan, кроме первого */
     border-top: none;
+}
+
+.servicePlan > :nth-child(-n+3) { /* выбирает любые первые три дочерних элемента внутри тега с классом servicePlan */
+    background-color: #333;
 }
 
 .servicePlanTitle {
@@ -144,21 +140,38 @@
     line-height: 42px;
 }
 
+.servicePlanTitle, .servicePlanPrice {
+    color: #fff;
+}
+
 .servicePlanSubtitle {
     height: 50px;
     line-height: 21px;
 }
 
-.servicePlanItems {
+.servicePlanItem {
+    background-color: #fff;
+    height: 50px;
     line-height: 21px;
 }
 
-.servicePlanItem {
-    height: 50px;
+.servicePlanSubtitle, .servicePlanItem {
+    color: #86878B;
 }
 
-.servicePlanSelected {
-    margin-bottom: 20px;
-    background-color: #f5f5f5;
-    box-shadow: 0px 4px 10px 0px #33333333; 
+@media (max-width: 1170px) { /* применяет стили, если ширина экрана меньше или равна 1170px */
+    .servicePlanList {
+        gap: 20px;
+    }
+}
+
+@media (max-width: 949px) {
+    .servicePlanList {
+        gap: 27px;
+    }
+
+    .servicePlanSelected {
+        margin-bottom: 0;
+        box-shadow: none; 
+    }
 }
